--- a/markdown-maven-plugin-eval/pom.xml
+++ b/markdown-maven-plugin-eval/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.systemresearch</groupId>
-    <artifactId>markdown-baseline</artifactId>
+    <artifactId>markdown-maven-plugin-eval</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     
@@ -57,7 +57,10 @@
                             <outputDirectory>${project.build.directory}/site/</outputDirectory>
                             <resources>          
                                 <resource>
-                                    <directory>${project.basedir}/src/site/markdown/markdown_doxia_files/</directory>
+                                    <directory>${project.basedir}/src/site/markdown</directory>
+                                    <excludes>
+                                        <exclude>**/*.md</exclude>
+                                    </excludes>
                                     <!-- filtering>true</filtering -->
                                 </resource>
                             </resources>              
